--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   phpfpm:
     container_name: phpfpm
-    image: nanoninja/php-fpm:8.1
+    image: xaosia/php:8.1-fpm
     ports:
       - 3000:3000
     volumes:
