--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   phpfpm:
     container_name: phpfpm
-    image: xaosia/php:8.0-fpm
+    image: xaosia/php:8.0-fpm:sourceguardian
     ports:
       - 3000:3000
     volumes:
