--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   phpfpm:
     container_name: phpfpm
-    image: nanoninja/php-fpm:7.4.10
+    image: xaosia/php:7.4-fpm:ioncube
     ports:
       - 3000:3000
     volumes:
